Finished rudimentary display of records for testing purposes Fixed the inital display that was broken due to the header spacing

--- a/gpsDashboardpaid/stylesheets/gpsdashboard.css
+++ b/gpsDashboardpaid/stylesheets/gpsdashboard.css
@@ -113,13 +113,13 @@
  */
 #initialDisplay {
 	text-align: center;
-	margin-top: 80px;
+	margin-top: 30px;
 }
 #initialDisplay.hidden {
 	opacity: 0;
 }
 #initialDisplay.landscape {
-	margin-top: 60px;
+	margin-top: 10px;
 }
 #accuracyNotice {
 	margin-top: 200px;
